refatoracao e correção de build